another changelist fix (having huge words in filtes causes them to wrap below content, even on desktop )

--- a/admin_styles/static/admin_styles/scss/admin/_changelist.scss
+++ b/admin_styles/static/admin_styles/scss/admin/_changelist.scss
@@ -3,8 +3,11 @@
     &.module {
         position: relative;
         display: flex;
-        flex-wrap: wrap;
         justify-content: space-between;
+        flex-wrap: wrap;
+        @media(min-width: 765px) {
+            flex-wrap: nowrap;
+        }
     }
 
     #toolbar {
@@ -54,6 +57,7 @@
 
     &.module.filtered {
         > #changelist-form, > .changelist-form-container {
+            width: 100%;
             @media(min-width: 765px) {
                 width: calc(100% - 270px);
             }
